--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,6 @@ hyperlink==21.0.0
 idna==3.3
 importlib-resources==5.8.0
 incremental==21.3.0
-ipfshttpclient==0.6.1
 itemadapter==0.6.0
 itemloaders==1.0.4
 jmespath==1.0.1
@@ -61,8 +60,7 @@ six==1.16.0
 tldextract==3.3.1
 toolz==0.12.0
 Twisted==22.4.0
-
-typing-extensions==4.3.0
+typing_extensions==4.3.0
 urllib3==1.26.10
 varint==1.0.2
 w3lib==1.22.0
